Fixed the vertical alignment of the buttonComlumn in the picklist

--- a/src/variables.less
+++ b/src/variables.less
@@ -3,7 +3,7 @@
 @size-clickable: 2.3em;
 @size-touchable: 3.0em;
 
-@list-min-height: @size-clickable * 4 + 2em;
+@list-min-height: floor(@size-clickable * 4 + 2%);
 @list-button-padding: 4px;
 @list-item-bg: @gray-lighter;
 @list-item-color: @text-color;
