--- a/src/widgets/select/select-list.less
+++ b/src/widgets/select/select-list.less
@@ -5,6 +5,7 @@
   margin: 0;
 
   .outer {
+    min-height: @list-min-height;
   }
 
   .header {
@@ -150,7 +151,7 @@
     padding-left: 0;
     margin-left: 0;
     list-style: none;
-    min-height: @list-min-height;
+    min-height:  @list-min-height - 1em;
   }
 
   li {
